--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,7 @@
 	"markdownlint.config": {
 		"MD030": false,
 		"MD033": {
-			"allowed_elements": ["table", "td", "tr", "strong"]
+			"allowed_elements": ["table", "td", "tr", "strong", "details", "summary"]
 		}
 	}
 }
