--- a/taskfile.yml
+++ b/taskfile.yml
@@ -19,6 +19,10 @@ tasks:
              --exclude_ext=yaml,sum,mod,md5 --not-match-f='LICENSE$|\.gitignore$' \
              .
 
+  godepgraph:
+    cmds:
+      - godepgraph -s -o github.com/ppipada/mapstore-go,command-line-arguments store_directory.go | dot -Tpng -o godepgraph.png
+
   tagstats:
     cmds:
       - ./scripts/git_tag_stats.sh
